--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,11 +2,8 @@ name: lint
 
 on:
   push:
-    branches:
-      - 'master'
+    branches: [main]
   pull_request:
-    branches:
-      - '*'
   schedule:
     - cron: "00 15 * * *"
 
